brought down note sequencer canvas by 18 pixels to allow for measure number display. Has bug where the text is really blurry for some reason. Will take a look at way later. not a priority atm

--- a/src/app/pages/Editor/components/TrackList/TrackList.module.scss
+++ b/src/app/pages/Editor/components/TrackList/TrackList.module.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-auto-flow: row;
     row-gap: 20px;
-    height: min-content;
+    height: max-content;
     padding: 20px;
     background-color: #101010;
 
