--- a/src/app/pages/Editor/components/TrackList/components/Midi/Midi.module.scss
+++ b/src/app/pages/Editor/components/TrackList/components/Midi/Midi.module.scss
@@ -86,6 +86,8 @@
 
     &.expanded {
         // height: min-content;
+        min-height: 0px;
+
     }
 
     &>.track {
