--- a/src/app/pages/Editor/components/TrackList/components/Midi/components/KeyboardReference/KeyboardReference.module.scss
+++ b/src/app/pages/Editor/components/TrackList/components/Midi/components/KeyboardReference/KeyboardReference.module.scss
@@ -2,11 +2,12 @@
     min-height: 0;
     display: grid;
     row-gap: 1px;
-    background-color: #333;
+    // background-color: #333;
     grid-auto-flow: rows;
-    height: calc(100% - 2px);
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    // margin-top: 17px;
+    height: calc(100% - 4px);
+    border-top: 2px solid #FFD700;
+    border-bottom: 2px solid #FFD700;
 
     &>.key {
         height: 15px;
